修改背景图

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=1">
     <link rel="stylesheet" href="css/style.css">
-    <title>geigei鸡乐盒 Plus</title>
+    <title>鸡乐盒 Plus</title>
     <style>
         * {
             margin: 0;
